# Content-based-Image-Retrieval

./: README.md  README.txt
CodeFiles/Q1/: CMakeLists.txt  Question1.cpp
CodeFiles/Q2/: CmakeLists.txt  Question2.cpp
CodeFiles/Q3/: CmakeLists.txt  Question3.cpp
CodeFiles/Q4/: CMakeLists.txt  Question4.cpp
CodeFiles/Q5/: CMakeLists.txt  Question5.cpp
CodeFiles/Q7/: CMakeLists.txt  Question7.cpp
CodeFiles/extension/: CMakeLists.txt  extension.cpp
